--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Mobil ve web geliştirmede profesyonel çözümler. Flutter, React Native, Firebase uzmanları." />
-    <title>Ulaş Uçan & Ekip - Mobil ve Web Geliştirme</title>
+    <title>MPDevelopers - Mobil ve Web Geliştirme</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
