--- a/public/404.html
+++ b/public/404.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="tr" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Mobil ve web geliştirmede profesyonel çözümler. Flutter, React Native, Firebase uzmanları." />
     <title>MPDevelopers - Mobil ve Web Geliştirme</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <script>
         // GitHub Pages için SPA routing düzeltmesi
         var pathSegmentsToKeep = 1;
@@ -19,6 +23,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
 </body>
 </html>
