--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="tr" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/mpdlogo2.png" />
+    <link rel="apple-touch-icon" href="/mpdlogo2.png" />
+    <link rel="shortcut icon" href="/mpdlogo2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Mobil ve web geliştirmede profesyonel çözümler. Flutter, React Native, Firebase uzmanları." />
     <title>MPDevelopers - Mobil ve Web Geliştirme</title>
